--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,63 @@ main.cpp
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/settings.json
+.idea/.name
+.idea/Lexical-Analyzer-Generator.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+cmake-build-debug/.cmake/api/v1/query/cache-v2
+cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+cmake-build-debug/.cmake/api/v1/reply/cache-v2-49708629715205a6358f.json
+cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-422e9df4820d5022037d.json
+cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-b5d78609f044f75a6193.json
+cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+cmake-build-debug/.cmake/api/v1/reply/index-2023-12-04T00-06-59-0376.json
+cmake-build-debug/.cmake/api/v1/reply/target-Lexical_Analyzer_Generator-Debug-8d99ce9257a193034821.json
+cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-3cb7ac949bd4d029da2a.json
+cmake-build-debug/.ninja_deps
+cmake-build-debug/.ninja_log
+cmake-build-debug/build.ninja
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/CMakeFiles/3.26.4/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.26.4/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.26.4/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.26.4/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.26.4/CMakeRCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.26.4/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.26.4/CompilerIdC/a.exe
+cmake-build-debug/CMakeFiles/3.26.4/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/a.exe
+cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/cmake.check_cache
+cmake-build-debug/CMakeFiles/CMakeConfigureLog.yaml
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/main.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/dfa.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/infix_to_postfix.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/input_parser.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/nfa.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/nfa_generator.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/operations_handler.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/state.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/SubsetConstruction.cpp.obj
+cmake-build-debug/CMakeFiles/Lexical_Analyzer_Generator.dir/src/token.cpp.obj
+cmake-build-debug/CMakeFiles/rules.ninja
+cmake-build-debug/CMakeFiles/TargetDirectories.txt
+cmake-build-debug/Lexical_Analyzer_Generator.exe
+cmake-build-debug/Testing/Temporary/LastTest.log
+main.cpp
+main.exe
+main.o
+Makefile
+parser.h.gch
+.idea/misc.xml
+main.cpp
+main.exe
+main.o
+Makefile
+parser.h.gch
